ubuntu-mate-welcome (16.04.4) xenial; urgency=medium

  * Fix system information.
  * Fix subscription updates.
  * Fix Abobe Flash.
  * Fix Dropbox.
  * Fix Google Chrome, i386 repository is no longer available.
  * Fix LibreOffice upgrades.
  * Fix Murmur, which was referenced but missing.
  * Fix RedNoteBook.
  * Fix Upgrade System, so it is compatible with Ubuntu MATE Base.
  * Add framework for accepting translations.
  * Add Ardour, Corebird, Gajim, GNOME Software, Time Tracker,
  Nuvola Player, OBS Studio, Pinta, SparkleShare, Vivaldi, Wireshark
  and Zenmap.
  * Add ubuntu-make PPA.
  * Update Software to consistenly use the name Software Boutique.
  * Update splash screen.
  * Update copyright attributions.
  * Whitespace cleanup.
  * Closes (LP: #)  

 -- Martin Wimpress <code@flexion.org>  Tue, 23 Feb 2016 21:35:07 +0000

ubuntu-mate-welcome (16.04.3) xenial; urgency=medium

  [ Luke Horwell ]  
    * Friendlier "not connected" messages.
    * Title bar is simply "Welcome".
    * Many minor tweaks and code consistency.
    * Catch exceptions when commands fail.
    * Rewrite date functions for Main Menu events.
    * New images.
    * Raspberry Pi 2 information about kernel upgrades.
    * Software Page is now built dynamically.
    * Add ability to launch apps.
    * Add ability to filter by subcategory.
    * Add expandable/collapsible more details for each app.
    * Add screenshots.
    * Add a Software Only Mode.
    * Add update subscription.
    * Highlight installed applications.
    * Show a spinner when applying actions.
    * One-click install links now scroll to specific server app.
    * Dynamically populate the random featured apps grid.
    * Always show software categories at top of page.
    * Show a 'busy' cursor when entering Software/Getting Started.
    * Handle apt operations via DynamicApps class.
    * Optimisations updating installed state of applications.    
    * Fixed Proprietary software toggle.

  [ Martin Wimpress ]